rail following algo improve

--- a/git_push.ipynb
+++ b/git_push.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -13,13 +13,25 @@
       "Your branch is up to date with 'origin/master'.\n",
       "\n",
       "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git add/rm <file>...\" to update what will be committed)\n",
       "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
       "\n",
-      "\t\u001b[31mmodified:   files_check.ipynb\u001b[m\n",
-      "\t\u001b[31mmodified:   git_push.ipynb\u001b[m\n",
-      "\t\u001b[31mmodified:   scratch/packages_check.ipynb\u001b[m\n",
-      "\t\u001b[31mmodified:   scratch/scratch.ipynb\u001b[m\n",
+      "\t\u001b[31mmodified:   rail_following--Loi/data_collection-DGMD.ipynb\u001b[m\n",
+      "\t\u001b[31mmodified:   rail_following--Loi/data_collection.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    rail_following--Loi/live_demo-DGMD--TileFloor.ipynb\u001b[m\n",
+      "\t\u001b[31mmodified:   rail_following--Loi/train_model-DGMD.ipynb\u001b[m\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\n",
+      "\t\u001b[31mrail_following--Loi/__archives__/\u001b[m\n",
+      "\t\u001b[31mrail_following--Loi/live_demo-DGMD--.html\u001b[m\n",
+      "\t\u001b[31mrail_following--Loi/live_demo-DGMD--.ipynb\u001b[m\n",
+      "\t\u001b[31mrail_following--Loi/live_demo_clean.ipynb\u001b[m\n",
+      "\t\u001b[31mrail_following--Loi/road_following_dataset_xy_2020-07-29_18-01-35--BlueTapePoolTblDay.zip\u001b[m\n",
+      "\t\u001b[31mrail_following--Loi/road_following_dataset_xy_2020-07-29_19-49-21--BlueTapePoolDusk.zip\u001b[m\n",
+      "\t\u001b[31mrail_following--Loi/road_following_dataset_xy_2020-07-29_22-59-30--BlueTapePoolNight.zip\u001b[m\n",
+      "\t\u001b[31mrail_following--Loi/smooth_throttle.ipynb\u001b[m\n",
       "\n",
       "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
@@ -31,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,40 +52,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 42eb975] collision avoidance\n",
-      " 4 files changed, 727 insertions(+), 961 deletions(-)\n",
-      " rewrite files_check.ipynb (88%)\n"
+      "[master 2388976] rail following UI improve\n",
+      " 12 files changed, 15564 insertions(+), 124 deletions(-)\n",
+      " create mode 100644 rail_following--Loi/__archives__/live_demo-DGMD--PoolTable.ipynb\n",
+      " rename rail_following--Loi/{ => __archives__}/live_demo-DGMD--TileFloor.ipynb (100%)\n",
+      " create mode 100644 rail_following--Loi/live_demo-DGMD--.html\n",
+      " create mode 100644 rail_following--Loi/live_demo-DGMD--.ipynb\n",
+      " create mode 100644 rail_following--Loi/live_demo_clean.ipynb\n",
+      " create mode 100644 rail_following--Loi/road_following_dataset_xy_2020-07-29_18-01-35--BlueTapePoolTblDay.zip\n",
+      " create mode 100644 rail_following--Loi/road_following_dataset_xy_2020-07-29_19-49-21--BlueTapePoolDusk.zip\n",
+      " create mode 100644 rail_following--Loi/road_following_dataset_xy_2020-07-29_22-59-30--BlueTapePoolNight.zip\n",
+      " create mode 100644 rail_following--Loi/smooth_throttle.ipynb\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"collision avoidance\""
+    "!git commit -m \"rail following UI improve\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 7, done.\n",
-      "Delta compression using up to 2 threads.\n",
-      "Compressing objects: 100% (7/7), done.\n",
-      "Writing objects: 100% (7/7), 8.43 KiB | 176.00 KiB/s, done.\n",
-      "Total 7 (delta 6), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (6/6), completed with 6 local objects.\u001b[K\n",
-      "To https://github.com/loibucket/2020_DGMD_S-17_Notebook_Jetbot\n",
-      "   5b4e156..42eb975  master -> master\n"
+      "Counting objects: 15, done.\n",
+      "Delta compression using up to 4 threads.\n",
+      "Compressing objects: 100% (15/15), done.\n",
+      "Writing objects: 100% (15/15), 4.54 MiB | 354.00 KiB/s, done.\n",
+      "Total 15 (delta 8), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (8/8), completed with 5 local objects.\u001b[K\n",
+      "To https://github.com/loibucket/autobus\n",
+      "   c594b0c..2388976  master -> master\n"
      ]
     }
    ],
