--- a/rail_following--Loi/live_demo-DGMD--.ipynb
+++ b/rail_following--Loi/live_demo-DGMD--.ipynb
@@ -42,9 +42,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jul 30 01:19:17 2020 go\n",
-      "Thu Jul 30 01:19:31 2020 best_steering_model_xy ok\n",
-      "Thu Jul 30 01:19:33 2020 ok\n"
+      "Thu Jul 30 11:00:37 2020 go\n",
+      "Thu Jul 30 11:00:52 2020 best_steering_model_xy--BlueTapePoolCombo.pth ok\n",
+      "Thu Jul 30 11:00:56 2020 ok\n"
      ]
     }
    ],
@@ -55,14 +55,15 @@
     "import torchvision\n",
     "import torch\n",
     "\n",
+    "model_file = 'best_steering_model_xy--BlueTapePoolCombo.pth'\n",
     "model = torchvision.models.resnet18(pretrained=False)\n",
     "model.fc = torch.nn.Linear(512, 2)\n",
-    "model.load_state_dict(torch.load('best_steering_model_xy.pth'))\n",
+    "model.load_state_dict(torch.load(model_file))\n",
     "device = torch.device('cuda')\n",
     "model = model.to(device)\n",
     "model = model.eval().half()\n",
     "\n",
-    "print(time.ctime(),'best_steering_model_xy ok')\n",
+    "print(time.ctime(),model_file,'ok')\n",
     "\n",
     "import torchvision.transforms as transforms\n",
     "import torch.nn.functional as F\n",
@@ -102,35 +103,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jul 30 01:25:17 2020 ok\n"
+      "Thu Jul 30 11:00:56 2020 ok\n"
      ]
     }
    ],
    "source": [
-    "def initial_throttle(init_throttle=0.6, rest_throttle=0.3, decay_time=0.5, steps=5):\n",
-    "    diff = (init_throttle - rest_throttle) / steps\n",
-    "    wait_frame = decay_time / steps\n",
-    "    throttle = init_throttle\n",
-    "    for i in range(steps):\n",
-    "        throttle -= diff\n",
-    "        time.sleep(wait_frame)\n",
-    "    throttle = rest_throttle\n",
-    "\n",
     "angle = 0.0\n",
     "angle_last = 0.0\n",
+    "mt = 0\n",
     "frame_cnt = 0\n",
-    "pp = time.time()\n",
     "interval = 0.1\n",
+    "stutter = 1\n",
     "debug = False\n",
+    "pp = time.time()\n",
     "def execute(change):\n",
-    "    global angle, angle_last, mt, frame_cnt, pp, debug, interval\n",
+    "    global angle, angle_last, mt, frame_cnt, pp, debug, interval, accel, stutter\n",
     "    \n",
     "    #limit run interval\n",
     "    if time.time() < pp + interval:\n",
@@ -151,9 +145,6 @@
     "    x_slider.value = x\n",
     "    y_slider.value = y\n",
     "    \n",
-    "    if y < 0.1:\n",
-    "        toggle_motor()\n",
-    "\n",
     "    speed_slider.value = speed_gain_slider.value\n",
     "\n",
     "    angle = np.arctan2(x, y)\n",
@@ -162,7 +153,7 @@
     "\n",
     "    steering_slider.value = pid + steering_bias_slider.value\n",
     "   \n",
-    "    #use default NVIDA algo\n",
+    "    #default NVIDA algo\n",
     "    if not debug:\n",
     "        robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0) *mt\n",
     "        robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0), 0.0) *mt\n",
@@ -179,22 +170,42 @@
     "        thres = turn_thres.value\n",
     "        if steering_slider.value > thres:\n",
     "            status.value = str(frame_cnt) + \" turn right\"\n",
-    "            robot.left_motor.value = 0.4 *mt\n",
-    "            robot.right_motor.value = 0.3 *mt\n",
-    "            interval = 0.05 #slow down the steps\n",
-    "\n",
+    "            robot.left_motor.value = max(robot.left_motor.value + 0.1, 0.4) *mt\n",
+    "            robot.right_motor.value = max(robot.right_motor.value + 0.1, 0.3) *mt\n",
+    "            interval = min(0.05, interval - 0.01) #decrease interval            \n",
+    "            stutter = 1\n",
+    "            \n",
+    "            #robot.right_motor.value = min(robot.right_motor.value - 0.1, 0.25) *mt\n",
+    "            #robot.left_motor.value = 0.4 *mt\n",
+    "            #robot.right_motor.value = 0.3 *mt\n",
+    "            \n",
     "        elif steering_slider.value < -thres:\n",
     "            status.value = str(frame_cnt) + \" turn left\"\n",
-    "            robot.left_motor.value = 0.3 *mt\n",
-    "            robot.right_motor.value = 0.4 *mt\n",
-    "            interval = 0.05\n",
+    "            robot.left_motor.value = max(robot.left_motor.value + 0.1, 0.3) *mt\n",
+    "            robot.right_motor.value = max(robot.right_motor.value + 0.1, 0.45) *mt\n",
+    "            interval = min(0.05, interval - 0.01) #decrease interval            \n",
+    "            stutter = 1\n",
+    "            \n",
+    "            #robot.left_motor.value = 0.3 *mt\n",
+    "            #robot.right_motor.value = 0.4 *mt\n",
     "\n",
-    "        else:\n",
+    "        else: #initial throttle then lower to coast speed\n",
     "            status.value = str(frame_cnt) + \" go straight\"\n",
-    "            #initial_throttle()\n",
-    "            robot.left_motor.value = 0.3 *mt\n",
-    "            robot.right_motor.value = 0.3 *mt\n",
-    "            interval = max(interval+0.01, 0.1) #increase steps\n",
+    "\n",
+    "            if robot.left_motor.value != robot.right_motor.value:\n",
+    "                robot.left_motor.value = robot.right_motor.value = min(robot.left_motor.value,robot.right_motor.value)\n",
+    "            \n",
+    "            if min(robot.left_motor.value,robot.right_motor.value) < 0.2:\n",
+    "                robot.left_motor.value = robot.right_motor.value = 0.3 *mt\n",
+    "                \n",
+    "            robot.left_motor.value = (robot.left_motor.value - 0.01) *mt\n",
+    "            robot.right_motor.value = (robot.right_motor.value - 0.01) *mt\n",
+    "            stutter = 0\n",
+    "            interval = max(interval+0.01, 0.1) #increase interval\n",
+    "            \n",
+    "            #robot.left_motor.value = 0.3 *mt\n",
+    "            #robot.right_motor.value = 0.3 *mt\n",
+    "\n",
     "\n",
     "    left_adjusted.value = robot.left_motor.value\n",
     "    right_adjusted.value = robot.right_motor.value\n",
@@ -220,14 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jul 30 01:25:18 2020 ok\n"
+      "Thu Jul 30 11:03:33 2020 ok\n"
      ]
     }
    ],
@@ -277,12 +288,12 @@
     "#will be zero, and it will increase / decrease with the actual angle.  \n",
     "\n",
     "status = ipywidgets.Textarea(value = \"status\")\n",
-    "\n",
     "sliders = widgets.VBox([speed_gain_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider,turn_thres])\n",
     "buttons = widgets.VBox([run_button,stop_button,camera_button,motor_button,stutter_button])\n",
     "y_sets = ipywidgets.HBox([y_slider,left_slider,right_slider,left_adjusted,right_adjusted])\n",
     "x_sets = widgets.VBox([x_slider, steering_slider, status])\n",
     "\n",
+    "#plot the xy prediction on the image\n",
     "def display_xy(camera_image):\n",
     "    image = np.copy(camera_image)\n",
     "    x = x_slider.value\n",
@@ -295,7 +306,7 @@
     "    jpeg_image = bgr8_to_jpeg(image)\n",
     "    return jpeg_image\n",
     "\n",
-    "cam_toggle = 1 #camera toggle, starts on\n",
+    "cam_toggle = 1 #camera toggle\n",
     "def toggle_camera():\n",
     "    global cam_toggle\n",
     "    if cam_toggle:\n",
@@ -306,11 +317,10 @@
     "        cam_toggle = 1\n",
     "\n",
     "mt = 0 #motor toggle, starts off\n",
-    "mta = 1\n",
     "def toggle_motor():\n",
     "    global mt\n",
     "    if mt: mt = 0\n",
-    "    else: mt = 1 * mta\n",
+    "    else: mt = 1\n",
     "        \n",
     "stutter = 1 #stutter toggle\n",
     "def toggle_stutter():\n",
@@ -351,13 +361,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4bbfd39b17c49ff8a6ca7394fb0f993",
+       "model_id": "fda87a3fa38142078bf08f5bc2dba819",
        "version_major": 2,
        "version_minor": 0
       },
@@ -371,12 +381,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "313544bb983e45a2a82673637b644e0a",
+       "model_id": "ce6750864c56428195c333a65b11bbfe",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HBox(children=(FloatSlider(value=0.2460479736328125, description='y', max=1.0, orientation='ver…"
+       "HBox(children=(HBox(children=(FloatSlider(value=0.0291748046875, description='y', max=1.0, orientation='vertic…"
       ]
      },
      "metadata": {},
@@ -386,7 +396,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jul 30 01:31:14 2020 ok\n"
+      "Thu Jul 30 11:05:05 2020 ok\n"
      ]
     }
    ],
@@ -404,12 +414,18 @@
     "display(ipywidgets.HBox([y_sets,x_sets]))\n",
     "\n",
     "frame_cnt = 0\n",
-    "execute({'new': camera.value}) #first run takes a while to load\n",
+    "mt = 0\n",
+    "stutter = 1\n",
     "robot.stop()\n",
     "robot.stop()\n",
-    "print(time.ctime(),'ok')\n",
+    "#status.value = \"ready\"\n",
     "\n",
-    "debug = True #False = default NVIDIA algo True = custom"
+    "debug = True #False = default NVIDIA algo True = custom\n",
+    "robot.left_motor.alpha = 1\n",
+    "robot.right_motor.alpha = 1 #scales motor speed by this\n",
+    "\n",
+    "#start()\n",
+    "print(time.ctime(),'ok')"
    ]
   },
   {
@@ -428,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,34 +492,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#toggle_stutter()\n",
-    "#stutter"
+    "#start()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.1 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "#mta = 1 #motor torque multiplier\n",
-    "#print(interval,mta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
