--- a/git_push.ipynb
+++ b/git_push.ipynb
@@ -16,22 +16,24 @@
       "  (use \"git add/rm <file>...\" to update what will be committed)\n",
       "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
       "\n",
+      "\t\u001b[31mmodified:   git_push.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    rail_following--Loi/__archives__/live_demo-DGMD--PoolTable.ipynb\u001b[m\n",
       "\t\u001b[31mmodified:   rail_following--Loi/data_collection-DGMD.ipynb\u001b[m\n",
-      "\t\u001b[31mmodified:   rail_following--Loi/data_collection.ipynb\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following--Loi/live_demo-DGMD--TileFloor.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    rail_following--Loi/live_demo-DGMD--.html\u001b[m\n",
+      "\t\u001b[31mmodified:   rail_following--Loi/live_demo-DGMD--.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    rail_following--Loi/live_demo-DGMD--PoolTable.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    rail_following--Loi/road_following_dataset_xy_2020-07-27_19-43-48--BlueTape.zip\u001b[m\n",
+      "\t\u001b[31mmodified:   rail_following--Loi/smooth_throttle.ipynb\u001b[m\n",
       "\t\u001b[31mmodified:   rail_following--Loi/train_model-DGMD.ipynb\u001b[m\n",
       "\n",
       "Untracked files:\n",
       "  (use \"git add <file>...\" to include in what will be committed)\n",
       "\n",
-      "\t\u001b[31mrail_following--Loi/__archives__/\u001b[m\n",
-      "\t\u001b[31mrail_following--Loi/live_demo-DGMD--.html\u001b[m\n",
-      "\t\u001b[31mrail_following--Loi/live_demo-DGMD--.ipynb\u001b[m\n",
-      "\t\u001b[31mrail_following--Loi/live_demo_clean.ipynb\u001b[m\n",
-      "\t\u001b[31mrail_following--Loi/road_following_dataset_xy_2020-07-29_18-01-35--BlueTapePoolTblDay.zip\u001b[m\n",
-      "\t\u001b[31mrail_following--Loi/road_following_dataset_xy_2020-07-29_19-49-21--BlueTapePoolDusk.zip\u001b[m\n",
-      "\t\u001b[31mrail_following--Loi/road_following_dataset_xy_2020-07-29_22-59-30--BlueTapePoolNight.zip\u001b[m\n",
-      "\t\u001b[31mrail_following--Loi/smooth_throttle.ipynb\u001b[m\n",
+      "\t\u001b[31mrail_following--Loi/__archives__/live_demo-DGMD--20200729.html\u001b[m\n",
+      "\t\u001b[31mrail_following--Loi/__archives__/live_demo-DGMD--PoolTable1.ipynb\u001b[m\n",
+      "\t\u001b[31mrail_following--Loi/__archives__/live_demo-DGMD--PoolTable2.ipynb\u001b[m\n",
+      "\t\u001b[31mrail_following--Loi/road_following_dataset_xy_2020-07-27_19-43-48--BlueTapeFloor.zip\u001b[m\n",
+      "\t\u001b[31mrail_following--Loi/road_following_dataset_xy_2020-07-30_11-32-11--BlueTapePoolMorning.zip\u001b[m\n",
       "\n",
       "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
@@ -59,22 +61,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 2388976] rail following UI improve\n",
-      " 12 files changed, 15564 insertions(+), 124 deletions(-)\n",
-      " create mode 100644 rail_following--Loi/__archives__/live_demo-DGMD--PoolTable.ipynb\n",
-      " rename rail_following--Loi/{ => __archives__}/live_demo-DGMD--TileFloor.ipynb (100%)\n",
-      " create mode 100644 rail_following--Loi/live_demo-DGMD--.html\n",
-      " create mode 100644 rail_following--Loi/live_demo-DGMD--.ipynb\n",
-      " create mode 100644 rail_following--Loi/live_demo_clean.ipynb\n",
-      " create mode 100644 rail_following--Loi/road_following_dataset_xy_2020-07-29_18-01-35--BlueTapePoolTblDay.zip\n",
-      " create mode 100644 rail_following--Loi/road_following_dataset_xy_2020-07-29_19-49-21--BlueTapePoolDusk.zip\n",
-      " create mode 100644 rail_following--Loi/road_following_dataset_xy_2020-07-29_22-59-30--BlueTapePoolNight.zip\n",
-      " create mode 100644 rail_following--Loi/smooth_throttle.ipynb\n"
+      "[master 4d47f1a] rail following algo improve\n",
+      " 10 files changed, 269 insertions(+), 175 deletions(-)\n",
+      " rename rail_following--Loi/{live_demo-DGMD--.html => __archives__/live_demo-DGMD--20200729.html} (100%)\n",
+      " rename rail_following--Loi/__archives__/{live_demo-DGMD--PoolTable.ipynb => live_demo-DGMD--PoolTable1.ipynb} (100%)\n",
+      " rename rail_following--Loi/{live_demo-DGMD--PoolTable.ipynb => __archives__/live_demo-DGMD--PoolTable2.ipynb} (99%)\n",
+      " rename rail_following--Loi/{road_following_dataset_xy_2020-07-27_19-43-48--BlueTape.zip => road_following_dataset_xy_2020-07-27_19-43-48--BlueTapeFloor.zip} (100%)\n",
+      " create mode 100644 rail_following--Loi/road_following_dataset_xy_2020-07-30_11-32-11--BlueTapePoolMorning.zip\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"rail following UI improve\""
+    "!git commit -m \"rail following algo improve\""
    ]
   },
   {
@@ -86,41 +84,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 15, done.\n",
+      "Counting objects: 11, done.\n",
       "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (15/15), done.\n",
-      "Writing objects: 100% (15/15), 4.54 MiB | 354.00 KiB/s, done.\n",
-      "Total 15 (delta 8), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (8/8), completed with 5 local objects.\u001b[K\n",
+      "Compressing objects: 100% (11/11), done.\n",
+      "Writing objects: 100% (11/11), 1.19 MiB | 409.00 KiB/s, done.\n",
+      "Total 11 (delta 7), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (7/7), completed with 7 local objects.\u001b[K\n",
       "To https://github.com/loibucket/autobus\n",
-      "   c594b0c..2388976  master -> master\n"
+      "   2388976..4d47f1a  master -> master\n"
      ]
     }
    ],
    "source": [
     "!git push origin master"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
