--- a/combined_code/autobus_live.ipynb
+++ b/combined_code/autobus_live.ipynb
@@ -8,20 +8,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Load Trained Models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Creating the Pre-Processing Function"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -147,7 +133,7 @@
     "    \n",
     "    \n",
     "    \n",
-    "    #########jetbot reads image and makes a steering decision\n",
+    "    #########jetbot reads image and makes a station stop decision\n",
     "    ####TODO\n",
     "    \n",
     "    \n",
