--- a/combined_code/autobus_live.ipynb
+++ b/combined_code/autobus_live.ipynb
@@ -219,7 +219,7 @@
     }
    ],
    "source": [
-    "#########setup interface - camera view, buttons, etc.\n",
+    "#########setup interface - camera view, buttons, etc.#############\n",
     "\n",
     "#user controlled sliders\n",
     "#1. Speed Control (speed_gain_slider): To start your JetBot increase ``speed_gain_slider`` \n",
@@ -393,7 +393,7 @@
     "mt = 0 #starts jetbot without moving\n",
     "stutter = 1 #move jetbot very slowly\n",
     "robot.stop()\n",
-    "robot.stop()\n",
+    "robot.stop() #jetbot occasionally does not respond to the first stop command\n",
     "\n",
     "debug = True #False = default NVIDIA algo True = custom\n",
     "robot.left_motor.alpha = 1 #scales motor speed by this, 1 is no change\n",
@@ -401,7 +401,10 @@
     "\n",
     "execute({'new': camera.value}) #test single image run\n",
     "start() #start jetbot without moving (mt=0, MOTOR button to toggle movement)\n",
-    "print(time.ctime(),'ok')"
+    "print(time.ctime(),'ok')\n",
+    "\n",
+    "#IMPORTANT: The camera must be re-initialized after it stops\n",
+    "#Rerun this block to reinitialize camera"
    ]
   },
   {
