rail tracking pth

--- a/combined_code/autobus_live--Waveshare.ipynb
+++ b/combined_code/autobus_live--Waveshare.ipynb
@@ -9,14 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jul 30 20:22:45 2020 go\n"
+      "Thu Jul 30 22:44:38 2020 go\n",
+      "Thu Jul 30 22:44:57 2020 best_steering_model_xy--PoolTable400.pth ok\n",
+      "Thu Jul 30 22:44:57 2020 ok\n"
      ]
     }
    ],
@@ -39,7 +41,7 @@
     "######Read Rail Tracking Model#######\n",
     "import torchvision\n",
     "import torch\n",
-    "model_file = 'steering_model_xy--PoolTable.pth'\n",
+    "model_file = 'best_steering_model_xy--PoolTable400.pth'\n",
     "model = torchvision.models.resnet18(pretrained=False)\n",
     "model.fc = torch.nn.Linear(512, 2)\n",
     "model.load_state_dict(torch.load(model_file))\n",
@@ -75,9 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thu Jul 30 22:55:36 2020 ok\n"
+     ]
+    }
+   ],
    "source": [
     "### Create a function that will get called whenever the camera's value changes. \n",
     "#This function will do the following steps\n",
@@ -197,9 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thu Jul 30 22:56:58 2020 ok\n"
+     ]
+    }
+   ],
    "source": [
     "#########setup interface - camera view, buttons, etc.#############\n",
     "\n",
@@ -212,7 +230,7 @@
     "steering_gain_slider = ipywidgets.FloatSlider(min=0.0, max=0.4, step=0.01, value=0.33, description='steering gain')\n",
     "steering_dgain_slider = ipywidgets.FloatSlider(min=0.0, max=0.4, step=0.01, value=0.33, description='steering kd')\n",
     "steering_bias_slider = ipywidgets.FloatSlider(min=-1.0, max=1.0, step=0.01, value=0, description='steering bias')\n",
-    "turn_thres = ipywidgets.FloatSlider(min=0, max=1.0, step=0.01, value=0.2, description='threshold') #turn threshold\n",
+    "turn_thres = ipywidgets.FloatSlider(min=0, max=1.0, step=0.01, value=0.25, description='threshold') #turn threshold\n",
     "\n",
     "#buttons\n",
     "button_layout = ipywidgets.Layout(width='80px', height='35px')\n",
@@ -314,13 +332,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b4f1fd494094316a6027ca7632d25c2",
+       "model_id": "1d44f8c6c0004318b164971aa0acd417",
        "version_major": 2,
        "version_minor": 0
       },
@@ -334,12 +352,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d40cb69d118f4991adefcc336b560668",
+       "model_id": "2674a5eb1d6c4f92b9bf1d7030eb352f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HBox(children=(FloatSlider(value=0.02587890625, description='y', max=1.0, orientation='vertical…"
+       "HBox(children=(HBox(children=(FloatSlider(value=0.0, description='y', max=1.0, orientation='vertical'), FloatS…"
       ]
      },
      "metadata": {},
@@ -349,7 +367,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jul 30 20:26:29 2020 ok\n"
+      "Thu Jul 30 22:57:29 2020 ok\n"
      ]
     }
    ],
@@ -366,7 +384,8 @@
     "\n",
     "frame_cnt = 0\n",
     "mt = 0 #starts jetbot without moving\n",
-    "stutter = 1 #move jetbot very slowly\n",
+    "stutter = 1 #move jetbot very slowly at start\n",
+    "turn_thres.value = 0.3\n",
     "robot.stop()\n",
     "robot.stop() #jetbot occasionally does not respond to the first stop command\n",
     "\n",
@@ -398,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
