rail following data

--- a/combined_code/autobus_live--Waveshare.ipynb
+++ b/combined_code/autobus_live--Waveshare.ipynb
@@ -16,9 +16,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jul 30 22:44:38 2020 go\n",
-      "Thu Jul 30 22:44:57 2020 best_steering_model_xy--PoolTable400.pth ok\n",
-      "Thu Jul 30 22:44:57 2020 ok\n"
+      "Fri Jul 31 20:02:22 2020 go\n",
+      "Fri Jul 31 20:02:41 2020 best_steering_model_xy--PoolTable400.pth ok\n",
+      "Fri Jul 31 20:02:41 2020 ok\n"
      ]
     }
    ],
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jul 30 22:55:36 2020 ok\n"
+      "Fri Jul 31 20:02:41 2020 ok\n"
      ]
     }
    ],
@@ -207,14 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jul 30 22:56:58 2020 ok\n"
+      "Fri Jul 31 20:02:42 2020 ok\n"
      ]
     }
    ],
@@ -332,13 +332,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "check camera\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d44f8c6c0004318b164971aa0acd417",
+       "model_id": "48cf00088b374451aaebf34fbaec733f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2674a5eb1d6c4f92b9bf1d7030eb352f",
+       "model_id": "5e85fd1b2754479483aaeb631a88dbf8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -367,7 +374,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jul 30 22:57:29 2020 ok\n"
+      "check network connection\n",
+      "Fri Jul 31 20:02:55 2020 ok\n"
      ]
     }
    ],
