steer obs colors

--- a/combined_code/autobus_live--Waveshare-steer-obstacle-colors.ipynb
+++ b/combined_code/autobus_live--Waveshare-steer-obstacle-colors.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sat Aug  1 23:58:52 2020 go\n"
+     ]
+    }
+   ],
    "source": [
     "#############import libraries, create helper functions, *.pth files, etc.#############\n",
     "import time\n",
@@ -46,9 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sat Aug  1 23:59:14 2020 best_steering_model_xy--PoolTable400.pth ok\n",
+      "Sat Aug  1 23:59:14 2020 ok\n"
+     ]
+    }
+   ],
    "source": [
     "######Rail Tracking Setup#######\n",
     "import torchvision\n",
@@ -100,9 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "check network connection\n",
+      "Sat Aug  1 23:59:19 2020 oba_model ok\n",
+      "Sat Aug  1 23:59:19 2020 ok\n"
+     ]
+    }
+   ],
    "source": [
     "######Collision Avoidance Setup#######\n",
     "import torch\n",
@@ -148,9 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sat Aug  1 23:59:19 2020 ok\n"
+     ]
+    }
+   ],
    "source": [
     "### Create a function that will get called whenever the camera's value changes. \n",
     "#This function will do the following steps\n",
@@ -200,26 +235,24 @@
     "    y = F.softmax(y, dim=1)\n",
     "    \n",
     "    prob_blocked = float(y.flatten()[0])\n",
-    "    if prob_blocked > 0.6:\n",
+    "    status_b.value = str(frame_cnt) + \" obstacle prob: \" + \"{:.2f}\".format(prob_blocked)\n",
+    "    if prob_blocked > 0.8:\n",
     "        robot.left_motor.value = 0\n",
     "        robot.right_motor.value = 0\n",
-    "        status_a.value = str(frame_cnt) + \" obstacle prob: \" + \"{:.2f}\".format(prob_blocked)\n",
     "        return\n",
     "    ##AAAAAAAAAAA jetbot finishes obstacle stop decision ######################\n",
     "    \n",
-    "\n",
-    "    \n",
     "    \n",
     "    ##BBBBBBBBBB jetbot reads image and makes a station stop decision #########\n",
-    "    \n",
+    "    image_frame = change['new']\n",
     "    # extracting out HSV color space values:\n",
     "    # H – Hue (Dominant Wavelength)\n",
     "    # S – Saturation (Purity/Shades of Color)\n",
     "    # V – Value (Intensity)\n",
-    "    hsv = cv2.cvtColor(change['new'], cv2.COLOR_BGR2HSV)\n",
+    "    hsv = cv2.cvtColor(image_frame, cv2.COLOR_BGR2HSV)\n",
     "    # adding median blur to image\n",
     "    hsv = cv2.medianBlur(hsv,5)\n",
-    "    print(hsv)\n",
+    "    # print(hsv)\n",
     "    # lower range of red\n",
     "    bttm_lower_red = np.array([0,120,70])\n",
     "    top_lower_red = np.array([10,255,255])\n",
@@ -275,7 +308,7 @@
     "    # upper range of purple\n",
     "    bttm_upper_purple = np.array([170,120,70]) # TODO: change values\n",
     "    top_upper_purple = np.array([180,255,255]) # TODO: change values\n",
-    "    upper_purple_mask = cv2.inRange(hsv, bttm_purple_green, top_purple_green)\n",
+    "    upper_purple_mask = cv2.inRange(hsv, bttm_upper_purple, top_upper_purple)\n",
     "    # generating the final mask to detect purple color\n",
     "    purple_range_mask = lower_purple_mask + upper_purple_mask\n",
     "    # removing noise through opening (erosion followed by dilation)\n",
@@ -286,23 +319,28 @@
     "    purple_results = cv2.bitwise_and(image_frame, image_frame, mask = purple_range_mask)\n",
     "    if red_results is not None:\n",
     "        # save detected color value as red\n",
-    "        color_detected = ‘red’\n",
+    "        color_detected = 'red'\n",
     "    elif yellow_results is not None:\n",
     "        # save detected color value as yellow\n",
-    "        color_detected = ‘yellow’\n",
+    "        color_detected = 'yellow'\n",
     "    elif green_results is not None:\n",
     "        # save detected color value as green\n",
-    "        color_detected = ‘green’\n",
+    "        color_detected = 'green'\n",
     "    elif purple_results is not None:\n",
     "        # save detected color value as purple\n",
-    "        color_detected = ‘purple’\n",
+    "        color_detected = 'purple'\n",
     "    else:\n",
     "        # save detected color value as other\n",
-    "        color_detected = ‘other’\n",
+    "        color_detected = 'other'\n",
     "    # output deteced color value\n",
-    "    status_b.value = str(frame_cnt) + \" color detected: \" + color_detected\n",
+    "    status_c.value = str(frame_cnt) + \" color detected: \" + color_detected\n",
     "    \n",
-    "    ##BBBBBBBBBB jetbot finishes station stop decision #########\n",
+    "    #if color_detected =='red':\n",
+    "    #    robot.left_motor.value = 0\n",
+    "    #    robot.right_motor.value = 0\n",
+    "    #    return\n",
+    "    \n",
+    "    ##BBBBBBBBBB jetbot finishes station stop decision ########################\n",
     "\n",
     "    \n",
     "    ##CCCCCCCCCCC jetbot reads image and makes a steering decision ############\n",
@@ -382,9 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sat Aug  1 23:59:35 2020 ok\n"
+     ]
+    }
+   ],
    "source": [
     "#########setup interface - camera view, buttons, etc.#############\n",
     "\n",
@@ -436,10 +482,11 @@
     "#arrange widgets in UI\n",
     "status_a = ipywidgets.Textarea(value = \"status a\")\n",
     "status_b = ipywidgets.Textarea(value = \"status b\")\n",
+    "status_c = ipywidgets.Textarea(value = \"status c\")\n",
     "sliders = widgets.VBox([speed_gain_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider,turn_thres])\n",
     "buttons = widgets.VBox([run_button,stop_button,camera_button,motor_button,stutter_button])\n",
     "y_sets = ipywidgets.HBox([y_slider,left_slider,right_slider,left_adjusted,right_adjusted])\n",
-    "x_sets = widgets.VBox([x_slider, steering_slider, status_a, status_b])\n",
+    "x_sets = widgets.VBox([x_slider, steering_slider, status_a, status_b, status_c])\n",
     "\n",
     "cam_toggle = 1 #enables/disables camera\n",
     "def toggle_camera():\n",
@@ -482,14 +529,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Display UI"
+    "### Display UI and Enable Controls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "check camera\n",
+      "check network connection\n",
+      "Sat Aug  1 23:59:49 2020 ok\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "feaf0d7c0927480fb219dd22549350e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "590305a35cef4151bca3ff096f81bf59",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HBox(children=(FloatSlider(value=0.0, description='y', max=1.0, orientation='vertical'), FloatS…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "try: camera.stop()\n",
     "except: print('check camera')\n",
@@ -499,14 +584,14 @@
     "camera_link = traitlets.dlink((camera, 'value'), (image_widget, 'value'), transform=display_xy)\n",
     "camera.start()\n",
     "\n",
-    "frame_cnt = 0\n",
     "mt = 0 #starts jetbot without moving\n",
-    "stutter = 0\n",
-    "\n",
-    "steer_debug = False #False = default NVIDIA algo True = custom\n",
+    "stutter = 0 #for debugging\n",
     "turn_thres.value = 0.3 #only used if steer_debug=True\n",
     "robot.left_motor.alpha = 1 #scales motor speed by this, 1 is no change\n",
     "robot.right_motor.alpha = 1 \n",
+    "frame_cnt = 0\n",
+    "\n",
+    "steer_debug = True #False = default NVIDIA algo True = custom\n",
     "\n",
     "execute({'new': camera.value}) #test single image run\n",
     "start() #start jetbot without moving (mt=0, MOTOR button to toggle movement)\n",
@@ -577,7 +662,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#start()"
+    "start()"
    ]
   },
   {
