steer obs colors

--- a/combined_code/autobus_live--Waveshare-steer-obstacle-colors.ipynb
+++ b/combined_code/autobus_live--Waveshare-steer-obstacle-colors.ipynb
@@ -359,14 +359,13 @@
     "\n",
     "    steering_slider.value = pid + steering_bias_slider.value\n",
     "   \n",
-    "    #use default NVIDA algo\n",
+    "    #NNNNNNNNNNNN use default NVIDA algo #############\n",
     "    if not steer_debug:\n",
     "        robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0) *mt\n",
     "        robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0), 0.0) *mt\n",
-    "        interval = fps #set same as frame rate\n",
+    "        interval = fps #set update interval same as frame rate\n",
     "        \n",
-    "        \n",
-    "    #########use AUTOBUS debugging algo##########\n",
+    "    #DDDDDDDDDDDD use AUTOBUS debugging algo ##########\n",
     "    else: \n",
     "        left_motor = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0) \n",
     "        right_motor = max(min(speed_slider.value - steering_slider.value, 1.0), 0.0) \n",
