--- a/git_push.ipynb
+++ b/git_push.ipynb
@@ -16,24 +16,14 @@
       "  (use \"git add/rm <file>...\" to update what will be committed)\n",
       "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
       "\n",
-      "\t\u001b[31mmodified:   git_push.ipynb\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following--Loi/__archives__/live_demo-DGMD--PoolTable.ipynb\u001b[m\n",
-      "\t\u001b[31mmodified:   rail_following--Loi/data_collection-DGMD.ipynb\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following--Loi/live_demo-DGMD--.html\u001b[m\n",
-      "\t\u001b[31mmodified:   rail_following--Loi/live_demo-DGMD--.ipynb\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following--Loi/live_demo-DGMD--PoolTable.ipynb\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following--Loi/road_following_dataset_xy_2020-07-27_19-43-48--BlueTape.zip\u001b[m\n",
-      "\t\u001b[31mmodified:   rail_following--Loi/smooth_throttle.ipynb\u001b[m\n",
-      "\t\u001b[31mmodified:   rail_following--Loi/train_model-DGMD.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    combined_code/autobus_live--Waveshare-steer-obstacle--sandbox.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    combined_code/autobus_live--Waveshare-steer-obstacle.html\u001b[m\n",
+      "\t\u001b[31mmodified:   files_check.ipynb\u001b[m\n",
       "\n",
       "Untracked files:\n",
       "  (use \"git add <file>...\" to include in what will be committed)\n",
       "\n",
-      "\t\u001b[31mrail_following--Loi/__archives__/live_demo-DGMD--20200729.html\u001b[m\n",
-      "\t\u001b[31mrail_following--Loi/__archives__/live_demo-DGMD--PoolTable1.ipynb\u001b[m\n",
-      "\t\u001b[31mrail_following--Loi/__archives__/live_demo-DGMD--PoolTable2.ipynb\u001b[m\n",
-      "\t\u001b[31mrail_following--Loi/road_following_dataset_xy_2020-07-27_19-43-48--BlueTapeFloor.zip\u001b[m\n",
-      "\t\u001b[31mrail_following--Loi/road_following_dataset_xy_2020-07-30_11-32-11--BlueTapePoolMorning.zip\u001b[m\n",
+      "\t\u001b[31mcombined_code/autobus_live--Waveshare-steer-obstacle-colors.ipynb\u001b[m\n",
       "\n",
       "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
@@ -61,18 +51,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 4d47f1a] rail following algo improve\n",
-      " 10 files changed, 269 insertions(+), 175 deletions(-)\n",
-      " rename rail_following--Loi/{live_demo-DGMD--.html => __archives__/live_demo-DGMD--20200729.html} (100%)\n",
-      " rename rail_following--Loi/__archives__/{live_demo-DGMD--PoolTable.ipynb => live_demo-DGMD--PoolTable1.ipynb} (100%)\n",
-      " rename rail_following--Loi/{live_demo-DGMD--PoolTable.ipynb => __archives__/live_demo-DGMD--PoolTable2.ipynb} (99%)\n",
-      " rename rail_following--Loi/{road_following_dataset_xy_2020-07-27_19-43-48--BlueTape.zip => road_following_dataset_xy_2020-07-27_19-43-48--BlueTapeFloor.zip} (100%)\n",
-      " create mode 100644 rail_following--Loi/road_following_dataset_xy_2020-07-30_11-32-11--BlueTapePoolMorning.zip\n"
+      "[master 9b89ca0] steer obs colors\n",
+      " 3 files changed, 238 insertions(+), 13850 deletions(-)\n",
+      " rename combined_code/{autobus_live--Waveshare-steer-obstacle--sandbox.ipynb => autobus_live--Waveshare-steer-obstacle-colors.ipynb} (88%)\n",
+      " delete mode 100644 combined_code/autobus_live--Waveshare-steer-obstacle.html\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"rail following algo improve\""
+    "!git commit -m \"steer obs colors\""
    ]
   },
   {
@@ -84,20 +71,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 11, done.\n",
+      "Counting objects: 5, done.\n",
       "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (11/11), done.\n",
-      "Writing objects: 100% (11/11), 1.19 MiB | 409.00 KiB/s, done.\n",
-      "Total 11 (delta 7), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (7/7), completed with 7 local objects.\u001b[K\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (5/5), 8.55 KiB | 972.00 KiB/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/loibucket/autobus\n",
-      "   2388976..4d47f1a  master -> master\n"
+      "   d62725e..9b89ca0  master -> master\n"
      ]
     }
    ],
    "source": [
     "!git push origin master"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
