--- a/git_push.ipynb
+++ b/git_push.ipynb
@@ -13,17 +13,10 @@
       "Your branch is up to date with 'origin/master'.\n",
       "\n",
       "Changes not staged for commit:\n",
-      "  (use \"git add/rm <file>...\" to update what will be committed)\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
       "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
       "\n",
-      "\t\u001b[31mdeleted:    combined_code/autobus_live--Waveshare-steer-obstacle--sandbox.ipynb\u001b[m\n",
-      "\t\u001b[31mdeleted:    combined_code/autobus_live--Waveshare-steer-obstacle.html\u001b[m\n",
-      "\t\u001b[31mmodified:   files_check.ipynb\u001b[m\n",
-      "\n",
-      "Untracked files:\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\n",
-      "\n",
-      "\t\u001b[31mcombined_code/autobus_live--Waveshare-steer-obstacle-colors.ipynb\u001b[m\n",
+      "\t\u001b[31mmodified:   git_push.ipynb\u001b[m\n",
       "\n",
       "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
@@ -35,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,17 +37,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 9b89ca0] steer obs colors\n",
-      " 3 files changed, 238 insertions(+), 13850 deletions(-)\n",
-      " rename combined_code/{autobus_live--Waveshare-steer-obstacle--sandbox.ipynb => autobus_live--Waveshare-steer-obstacle-colors.ipynb} (88%)\n",
-      " delete mode 100644 combined_code/autobus_live--Waveshare-steer-obstacle.html\n"
+      "[master 116f32b] steer obs colors\n",
+      " 2 files changed, 25 insertions(+), 32 deletions(-)\n"
      ]
     }
    ],
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -74,11 +65,11 @@
       "Counting objects: 5, done.\n",
       "Delta compression using up to 4 threads.\n",
       "Compressing objects: 100% (5/5), done.\n",
-      "Writing objects: 100% (5/5), 8.55 KiB | 972.00 KiB/s, done.\n",
-      "Total 5 (delta 3), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+      "Writing objects: 100% (5/5), 885 bytes | 885.00 KiB/s, done.\n",
+      "Total 5 (delta 4), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (4/4), completed with 4 local objects.\u001b[K\n",
       "To https://github.com/loibucket/autobus\n",
-      "   d62725e..9b89ca0  master -> master\n"
+      "   9b89ca0..116f32b  master -> master\n"
      ]
     }
    ],
